@@ -2,6 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="collective.z3cform.wizard">
 
   <include package="plone.z3cform"/>
@@ -12,5 +13,10 @@
   <browser:resource
       name="collective.z3cform.wizard.css"
       file="wizard.css"/>
+
+  <adapter
+      zcml:condition="installed plone.autoform"
+      factory=".autowizard.AutoWizardWidgetTraversal"
+      />
 
 </configure>
